--- a/README
+++ b/README
@@ -1,39 +1,46 @@
 TicGit Distributed Ticketing System
 ===================================
 
-This project provides a ticketing system built on Git that is kept in a 
+This project provides a ticketing system built on Git that is kept in a
 separate branch in your projects Git repository.
+
 
 Installing
 ===================================
-You will need the 'git' gem (ver 1.0.5) to use this. Then you can run :
 
-rake
-sudo gem install pkg/ticgit-0.1.0.gem 
+TicGit depends on the 'git' gem (>= 1.0.5).
+
+To install all dependencies automatically you can use `rake setup`, and to create a gem and install it, just issue `rake install`.
 
 
 Usage
 ===================================
-See http://github.com/schacon/ticgit/wikis for a bunch of examples
 
-ti list - show all tickets
+See http://github.com/manveru/ticgit/wikis for a bunch of examples
 
-ti show - show details of a specific ticket
+To get a list of all commands with short description:
 
-ti new - create a new ticket
+  ti --help
 
-ti checkout - checkout a ticket
+To get help about a specific command:
 
-ti state - change a ticket state (open, resolved, invalid, hold)
+  ti <command> --help
+  # for example
+  ti list --help
 
-ti comment - add a comment to a ticket
+Some of the available commands are:
 
-ti tag - add or delete a tag from a ticket
-
-ti assign - change to whom a ticket is assigned
+  ti list     - show all tickets
+  ti show     - show details of a specific ticket
+  ti new      - create a new ticket
+  ti checkout - checkout a ticket
+  ti state    - change a ticket state (open, resolved, invalid, hold)
+  ti comment  - add a comment to a ticket
+  ti tag      - add or delete a tag from a ticket
+  ti assign   - change to whom a ticket is assigned
 
 
 Authors
 ===================================
-Scott Chacon  (schacon@gmail.com)
- 
+Scott Chacon                (schacon@gmail.com)
+Michael 'manveru' Fellinger (m.fellinger@gmail.com)
