Updated project info to use my info, added myself to authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,6 @@ Following persons have contributed to Ticgit.
      2 James Healy <jimmy@deefa.com>
      1 Magnus Holm <judofyr@gmail.com>
      1 Marko Mikulicic <marko.mikulicic@isti.cnr.it>
+
+Active Maintainers:
+    Jeff Welling <jeff.welling@gmail.com>
