--- a/README.mkd
+++ b/README.mkd
@@ -5,7 +5,7 @@ separate branch in your projects Git repository.
 
 
 ### Installing ###
-Installation on a Debian stable system.  The presumption is made that you already have git-core installed and are using it for your software development.
+Installation on a Debian stable system.  The presumption is made that you already have `git-core` installed and are using git for your software development.  Note that the command line interface for ticgit can be run from Debian stable, but some of the gems required for the web interface may require you to use [apt](http://jaqque.sbih.org/kplug/apt-pinning.html) [pinning](http://jeffwelling.github.com//2010/09/05/Apt-Pinning.html) to run without errors.  See below. 
 
 If you know what rake is and know you already have it installed, you can use the command `rake setup` to automatically install all dependencies.
 
