Added note about the authors file at the bottom

--- a/README.mkd
+++ b/README.mkd
@@ -83,3 +83,5 @@ Scott Chacon                (schacon@gmail.com)
 
 Current Active Maintainer:
 Jeff Welling                (jeff.welling@gmail.com)
+
+For a detailed list of contributors see the AUTHORS file
