--- a/README.mkd
+++ b/README.mkd
@@ -15,8 +15,16 @@ It will automatically create the new branch the first time you use it, and it ca
 
 TicGit is currently using itself to store its feature requests and bug reports.
 
+### Prerequisites ###
+
+It is assumed that you already have a recent version of the Git revision control system installed. If it is not available through your package manager, you can download the latest Git source code from http://git-scm.com/ instead.
+
+It is also assumed that you have a recent version of rubygems installed.  Older versions, such as the one available on Debian 5.0.5, will not work out of the box with the new gem repositories because the .deb in stable relies on rubyforge rather than rubygems for its operations. See http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=558251 for an example. I'm not saying it can't work, just that it doesn't out of the box. If you are running an older version of rubygems, you may need to get the latest rubygems package from http://rubygems.org/ or [apt](http://jaqque.sbih.org/kplug/apt-pinning.html) [pinning](http://jeffwelling.github.com//2010/09/05/Apt-Pinning.html) before being able to properly install the git and ticgit gems.
+
+It's because the .deb in stable relies on rubyforge rather than rubygems for its operations. See http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=558251 for an example. I'm not saying it can't work, just that it doesn't out of the box.
+
 ### Installing ###
-Installation on a Debian stable system.  The presumption is made that you already have `git-core` installed and are using git for your software development.  Note that the command line interface for ticgit can be run from Debian stable, but some of the gems required for the web interface may require you to use [apt](http://jaqque.sbih.org/kplug/apt-pinning.html) [pinning](http://jeffwelling.github.com//2010/09/05/Apt-Pinning.html) to run without errors.  See below. 
+Installation on a Debian stable system.  Note that the command line interface for ticgit can be run from Debian stable, but some of the gems required for the web interface may require you to use [apt](http://jaqque.sbih.org/kplug/apt-pinning.html) [pinning](http://jeffwelling.github.com//2010/09/05/Apt-Pinning.html) to run without errors.  See below. 
 
 If you know what rake is and know you already have it installed, you can use the command `rake setup` to automatically install all dependencies.
 
