--- a/README.mkd
+++ b/README.mkd
@@ -17,6 +17,10 @@ TicGit is currently using itself to store its feature requests and bug reports.
 
 ### Prerequisites ###
 
+There are two sets of prerequisites, those for people who intend to just run `ti`, and another set for those who wish to run `ticgitweb` as well. `ticgitweb` has additional dependancies that aren't required for `ti`'s use.
+
+**`ti`**
+
 Required Packages: git, ruby, rubygems
 
 Required Ruby Gems: git
@@ -25,6 +29,20 @@ To install these packages on a Debian system, or a Debian based system like Ubun
 
     sudo aptitude install git ruby rubygems
     sudo gem install git
+
+**`ticgitweb`**
+
+Required Packages: git, ruby, rubygems
+
+Required Ruby Gems: git, sinatra, haml, sass
+
+To install these packages on a Debian system, or a Debian based system like Ubuntu, do
+
+    sudo aptitude install git ruby rubygems
+    sudo gem install git sinatra haml sass
+
+
+
 
 **A Note about rubygems**
 
